deploy/k8s/staging/patch-ingest-strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spanbarn-ingest
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
  template:
    spec:
      priorityClassName: spanbarn-staging
