deploy/k8s/staging/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spanbarn
spec:
  template:
    spec:
      containers:
        - name: spanbarn
          resources:
            requests:
              cpu: 50m
