deploy/k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spanbarn
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: spanbarn-staging.nijmegen.wiebe.xyz
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spanbarn
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spanbarn-web
                port:
                  name: http
  tls:
    - hosts:
        - spanbarn-staging.nijmegen.wiebe.xyz
